Code cleanup and added getAllUsers
