# src/generated/swagger.json
@@ -52,6 +52,71 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/users": {
+			"get": {
+				"operationId": "GetAllUsers",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/User"
+									},
+									"type": "array",
+									"nullable": true
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Users not found"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				},
+				"description": "Get all existing users",
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "CreateOrUpdateUser",
+				"responses": {
+					"201": {
+						"description": "User successfully created or updated"
+					},
+					"400": {
+						"description": "Bad request: invalid email"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				},
+				"description": "Create a new user or automatically update an existing user if the email address already exists",
+				"summary": "Create or update a user",
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"description": "the user to create or update",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/User"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/users/{email}": {
 			"get": {
 				"operationId": "GetUserByEmail",
@@ -99,7 +164,7 @@
 				]
 			},
 			"delete": {
-				"operationId": "RemoveUser",
+				"operationId": "RemoveUserByEmail",
 				"responses": {
 					"204": {
 						"description": "User successfully deleted"
@@ -130,40 +195,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/users": {
-			"put": {
-				"operationId": "CreateOrUpdateUser",
-				"responses": {
-					"201": {
-						"description": "User successfully created or updated"
-					},
-					"400": {
-						"description": "Bad request: invalid email"
-					},
-					"500": {
-						"description": "Internal server error"
-					}
-				},
-				"description": "Create a new user or automatically update an existing user if the email address already exists",
-				"summary": "Create or update a user",
-				"tags": [
-					"Users"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"description": "the user to create or update",
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/User"
-							}
-						}
-					}
-				}
 			}
 		}
 	},
